fix services modal on mobile, font size was too small. Fixes #5

--- a/src/assets/css/site.less
+++ b/src/assets/css/site.less
@@ -271,16 +271,22 @@ main {
 		box-shadow: 3px 3px 12px rgba(0,0,0,0), 
 					0 0 0 1000px rgba(0,0,0,0.4);
 
+		height:auto;
+
+		p {
+			font-size:1em;
+		}
+
 		@media screen and (min-width:64.063em) {
 			height:340px;
-
+			
 			.name-desc {
 				height:240px;
 			}
-		}
 
-		p {
-			font-size:0.5em;
+			p {
+				font-size:0.5em;
+			}
 		}
 		.contact-us {
 			display: block;
